# papers-search

./: .gitignore  Home.py  README.md  generate_vectors.py  load_vects.py  pyproject.toml  requirements.txt  sbert.py  search.py  subject_data.py
assets/: subject_data.py
pages/: Scopus Data.py  Scraped Data.py  Search Papers ✨.py  Search Papers.py
scraping/: arxiv2.py  arxiv3.py  scopus_subject.py  subject_data.py  testarxiv.py
scripts/: generate_vectors.py
