[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "psycopg-binary>=3.2.3",
    "psycopg>=3.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.0",
    "sentence-transformers>=3.3.1",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.2",
    "plotly>=5.24.1",
    "geopy>=2.4.1",
]
